--- a/index.html
+++ b/index.html
@@ -1012,7 +1012,7 @@
 
                     <p class="datemark" style="border-left: 3px solid var(--primary-color); padding: 5px;"><strong>Country:</strong><br>Nigeria</p>
                     
-                    <p class="datemark" style="border-left: 3px solid var(--primary-color); padding: 5px;"><strong>WhatsApp:</strong><a href="https://wa.ma/+2348066123142" style="color:var(--text-light); text-decoration: none;"><br>+234 806 612 3142</a></p>
+                    <p class="datemark" style="border-left: 3px solid var(--primary-color); padding: 5px;"><strong>WhatsApp:</strong><a href="https://wa.ma/2348066123142" style="color:var(--text-light); text-decoration: none;"><br>+234 806 612 3142</a></p>
 
                     <p class="datemark" style="border-left: 3px solid var(--primary-color); padding: 5px;"><strong>Email:</strong> <a href="mailto:fofem2@gmail.com" style="color:var(--text-light); text-decoration: none;"><br>fofem2@gmail.com</a></p>
 
