Modify image source and deactivate translation section
Updated image source for Mr. Ubi Fredrick and deactivated language translation section.

--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@
                     <li><a href="#contact">Contact</a></li>
                     </ul> 
             </nav>
-
+  <!---- Deactivated till am done with all the language translation
             <div class="lang">
                <img class="langdrop" id="langicon" src="lang.png" alt="Languages">
                 <div id="ldrop" class="llist">
@@ -971,7 +971,7 @@
                     <a href="forra.es.html"><b>Español</b><br><i>Spanish</i></a>
                 </div>
             </div>
-            
+     ----->       
             <div class="hamburger" id="hamburger-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -992,7 +992,7 @@
 
         <div id="loginform">
             <div id="formcontainer">
-                <img src="Fred.png" alt="Mr. Ubi Fredrick"/>
+                <img src="Fred.jpg" alt="Mr. Ubi Fredrick"/>
             </div>  
             <div class="" style="position:relative; margin:5px; padding:8px;padding-left:30px; padding-top:10px; padding-bottom:10px;">
                      
